# Tetris-SFML

./: CMakeLists.txt  LICENSE  uml.docx
headers/: AboutPage.hpp  Bar.hpp  BaseAnimation.hpp  Board.hpp  ButtonBackToMenu.hpp  ButtonMute.hpp  ButtonPause.hpp  ButtonRetry.hpp  CubePattern.hpp  DelayTimer.hpp  DisplayWindow.hpp  FireTrailAnimation.hpp  Game.hpp  GamePlayPage.hpp  Globals.hpp  GravityTimer.hpp  LeaderBoardPage.hpp  LeaderBoardUtils.hpp  LineClearAnimation.hpp  MenuMain.hpp  Page.hpp  Pattern_I.hpp  Pattern_J.hpp  Pattern_L.hpp  Pattern_O.hpp  Pattern_S.hpp  Pattern_T.hpp  Pattern_Z.hpp  ResourcesManager.hpp  ScoreEntry.hpp  ScorePopup.hpp  ShakeManager.hpp  UIBar.hpp  UIButton.hpp
resources/: scores.txt
src/: AboutPage.cpp  Board.cpp  ButtonBackToMenu.cpp  ButtonMute.cpp  ButtonPause.cpp  ButtonRetry.cpp  CubePattern.cpp  DelayTimer.cpp  DisplayWindow.cpp  FireTrailAnimation.cpp  Game.cpp  GamePlayPage.cpp  GravityTimer.cpp  LeaderBoardPage.cpp  LeaderBoardUtils.cpp  LineClearAnimation.cpp  MenuMain.cpp  Pattern_I.cpp  Pattern_J.cpp  Pattern_L.cpp  Pattern_O.cpp  Pattern_S.cpp  Pattern_T.cpp  Pattern_Z.cpp  ResourcesManager.cpp  ScorePopup.cpp  ShakeManager.cpp  UIBar.cpp  UIButton.cpp  main.cpp
